readme; добавлена обработка всех crud-операций в контроллер; обработка всех операций в сервисе; исправлены сигнатуры методов интерфейса EmployeeService; порт запуска приложения; добавлен 1 тест на метод сервиса getById; добавлены эндпоинты для утилиты http-запросов